syntax = "proto3";

package social;

option go_package = "cacc/proto/socialpb";

// ──────────────────────────────────────────────
// Core Models
// ──────────────────────────────────────────────

message Post {
  int32  id         = 1;
  string texto      = 2;
  string author     = 3;
  int32  user_id    = 4;
  int32  parent_id  = 5;  // 0 = root post
  int32  likes      = 6;
  int32  reply_count = 7;
  int64  created_at = 8;  // unix millis
  repeated Post replies = 9;
}

message Profile {
  string username    = 1;
  int32  total_posts = 2;
  int32  total_likes = 3;
  repeated Post posts = 4;
}

message LikeResult {
  int32 post_id = 1;
  int32 likes   = 2;
}

message DeleteResult {
  int32  id     = 1;
  string status = 2;
}

// ──────────────────────────────────────────────
// Requests
// ──────────────────────────────────────────────

message FeedRequest {
  int32 limit  = 1;
  int32 offset = 2;
}

message ThreadRequest {
  int32 id = 1;
}

message ProfileRequest {
  string username = 1;
}

message CreatePostRequest {
  string texto = 1;
}

message CommentRequest {
  int32  parent_id = 1;
  string texto     = 2;
}

message LikeRequest {
  int32 id = 1;
}

message DeletePostRequest {
  int32 id = 1;
}

// ──────────────────────────────────────────────
// Responses
// ──────────────────────────────────────────────

message FeedResponse {
  repeated Post posts = 1;
  int32 total         = 2;
}

message ThreadResponse {
  Post post = 1;
}

message ProfileResponse {
  Profile profile = 1;
}

message PostResponse {
  Post post = 1;
}

message LikeResponse {
  LikeResult result = 1;
}

message DeleteResponse {
  DeleteResult result = 1;
}
